<resources>
    <string name="app_name">Flashcard Friends</string>
    <string name="action_settings">Settings</string>
    <string name="button_create">Create New Set</string>
    <string name="button_edit">Edit Existing Set</string>
    <string name="button_play">Play!</string>
    <string name="button_submit">Submit</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>
    <string name="button_delete_set">Delete Set</string>
    <string name="button_add_new_card">Add New Card</string>

    <string name="radio_flashcard">Flashcards</string>
    <string name="radio_multiple_choice">Multiple Choice</string>
    <string name="radio_practice">Double side mode</string>
    <string name="radio_test">Single side mode</string>

    <string name="edit_set_name">Name of Set</string>
</resources>
