<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:showDividers="middle"

    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.flashcardfriends.eric.flashcardfriends.PlayOptions">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Play Options"
        android:id="@+id/play_options_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioGroupPracticeTest"
        android:checkedButton="@+id/radio_practice">

        <RadioButton android:id="@+id/radio_practice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_practice"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_test"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_play"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="play"
        android:background="#33FF33"/>

</LinearLayout>
